--- a/hk2-locator/pom.xml
+++ b/hk2-locator/pom.xml
@@ -168,5 +168,28 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>jdk9+</id>
+            <activation>
+                <jdk>[9,)</jdk>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                          <groupId>org.apache.maven.plugins</groupId>
+                          <artifactId>maven-surefire-plugin</artifactId>
+                          <executions>
+                                <execution>
+                                    <id>default-testCompile</id>
+                                </execution>
+                          </executions>
+                          <configuration>
+                              <argLine>--illegal-access=permit --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                          </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
