Change profile id to to jdk9plus
Signed-off-by: Jonathan Coustick <jonathan.coustick@payara.fish>

--- a/hk2-locator/pom.xml
+++ b/hk2-locator/pom.xml
@@ -2,7 +2,7 @@
 <!--
 
     Copyright (c) 2010, 2018 Oracle and/or its affiliates. All rights reserved.
-    Copyright (c) 2019, 2020 Payara Services Ltd.
+    Copyright (c) 2019, 2021 Payara Services Ltd.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Public License v. 2.0, which is available at
@@ -169,7 +169,7 @@
             </build>
         </profile>
         <profile>
-            <id>jdk9+</id>
+            <id>jdk9plus</id>
             <activation>
                 <jdk>[9,)</jdk>
                 <activeByDefault>false</activeByDefault>
