--- a/hk2-testing/pom.xml
+++ b/hk2-testing/pom.xml
@@ -2,6 +2,7 @@
 <!--
 
     Copyright (c) 2010, 2018 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2021 Payara Services Ltd.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Public License v. 2.0, which is available at
@@ -38,6 +39,7 @@
         <module>hk2-runlevel-extras</module>
         <module>hk2-locator-no-proxies</module>
         <module>hk2-locator-no-proxies2</module>
+        <module>di-tck</module>
         <module>interceptor-events</module>
         <module>hk2-mockito</module>
         <module>collections</module>
