--- a/hk2-core/pom.xml
+++ b/hk2-core/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.glassfish.hk2</groupId>
         <artifactId>hk2-parent</artifactId>
-        <version>2.6.1</version>
+        <version>2.6.2-SNAPSHOT</version>
     </parent>
     <artifactId>hk2-core</artifactId>
     <name>HK2 core module</name>
