--- a/pom.xml
+++ b/pom.xml
@@ -229,7 +229,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-enableassertions</argLine>
                     <systemProperties>
                         <property>
                             <name>java.util.logging.config.file</name>
@@ -878,7 +877,7 @@
 
     <profiles>
         <profile>
-            <id>sonar</id>
+            <id>jacoco</id>
             <build>
                 <plugins>
                     <plugin>
@@ -893,12 +892,6 @@
                                     <value>logging.properties</value>
                                 </property>
                             </systemProperties>
-                            <properties>
-                              <property>
-                                <name>listener</name>
-                                <value>org.sonar.java.jacoco.JUnitListener</value>
-                              </property>
-                            </properties>
                         </configuration>
                         <dependencies>
                             <dependency>
@@ -917,7 +910,6 @@
                                  is passed as VM argument when Maven the Surefire plugin is executed. -->
                             <execution>
                                 <id>agent-jacoco-property</id>
-                                <phase>test</phase>
                                 <goals>
                                     <goal>prepare-agent</goal>
                                 </goals>
@@ -933,7 +925,6 @@
                                  after unit tests have been run. -->
                             <execution>
                                 <id>post-unit-test</id>
-                                <phase>test</phase>
                                 <goals>
                                     <goal>report</goal>
                                 </goals>
@@ -946,21 +937,8 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>sonar-maven-plugin</artifactId>
-                        <version>2.7.1</version>
-                    </plugin>
                 </plugins>
             </build>
-            <dependencies>
-               <dependency>
-                  <groupId>org.codehaus.sonar-plugins.java</groupId>
-                  <artifactId>sonar-jacoco-listeners</artifactId>
-                  <version>3.2</version>
-                  <scope>test</scope>
-               </dependency>
-            </dependencies>
         </profile>
         <profile>
             <id>javadoc-jdk8+</id>
