--- a/hk2-locator/pom.xml
+++ b/hk2-locator/pom.xml
@@ -159,8 +159,7 @@
                                 <execution>
                                     <id>default-testCompile</id>
                                     <configuration>
-                                        <source>1.8</source>
-                                        <target>1.8</target>
+                                        <release>8</release>
                                     </configuration>
                                 </execution>
                           </executions>
