--- a/pom.xml
+++ b/pom.xml
@@ -163,7 +163,7 @@
         <slf4j.version>1.7.36</slf4j.version>
         <org.jboss.logging.version>3.5.0.Final</org.jboss.logging.version>
         <jersey.version>3.1.0-M6</jersey.version>
-        <grizzly.version>3.0.1</grizzly.version>
+        <grizzly.version>4.0.0-M2</grizzly.version>
         <hamcrest.version>1.3</hamcrest.version>
         <jakarta.servlet.version>6.0.0</jakarta.servlet.version>
         <jakarta.ws.rs.version>3.1.0</jakarta.ws.rs.version>
