--- a/pom.xml
+++ b/pom.xml
@@ -170,14 +170,14 @@
         <springcontext.version>6.0.7</springcontext.version>
         <guice.version>5.1.0</guice.version>
         <protobuf.version>3.22.2</protobuf.version>
-        
-        <legal.doc.source>${maven.multiModuleProjectDirectory}/</legal.doc.source>     
+
+        <legal.doc.source>${maven.multiModuleProjectDirectory}/</legal.doc.source>
 
         <findbugs.exclude />
         <findbugs.threshold>High</findbugs.threshold>
         <surefireArgLineExtra />
         <release.arguments />
-        
+
         <manifest.location>target/classes/META-INF/MANIFEST.MF</manifest.location>
     </properties>
 
@@ -227,12 +227,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <systemProperties>
-                        <property>
-                            <name>java.util.logging.config.file</name>
-                            <value>logging.properties</value>
-                        </property>
-                    </systemProperties>
+                    <systemPropertyVariables>
+                        <java.util.logging.config.file>logging.properties</java.util.logging.config.file>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
             <plugin>
@@ -625,7 +622,7 @@
             <dependency>
                 <groupId>jakarta.enterprise</groupId>
                 <artifactId>jakarta.enterprise.cdi-api</artifactId>
-                <version>${jakarta.enterprise.cdi-api.version}</version> 
+                <version>${jakarta.enterprise.cdi-api.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.osgi</groupId>
