--- a/maven-plugins/hk2-inhabitant-generator/pom.xml
+++ b/maven-plugins/hk2-inhabitant-generator/pom.xml
@@ -53,6 +53,9 @@
                  <executions>
                      <execution>
                          <id>gendir</id>
+                         <goals>
+                             <goal>testCompile</goal>
+                         </goals>
                          <configuration>
                              <testExcludes>
                                  <exclude>**/negative/*</exclude>
@@ -60,12 +63,12 @@
                              </testExcludes>
                              <outputDirectory>${project.build.testOutputDirectory}/gendir</outputDirectory>
                          </configuration>
-                         <goals>
-                             <goal>testCompile</goal>
-                         </goals>
                      </execution>
                      <execution>
                          <id>negative</id>
+                         <goals>
+                             <goal>testCompile</goal>
+                         </goals>
                          <configuration>
                              <testExcludes>
                                  <exclude>generator</exclude>
@@ -75,9 +78,6 @@
                              </testIncludes>
                              <outputDirectory>${project.build.testOutputDirectory}/negative</outputDirectory>
                          </configuration>
-                         <goals>
-                             <goal>testCompile</goal>
-                         </goals>
                      </execution>
                  </executions>
              </plugin>
@@ -86,7 +86,7 @@
                  <artifactId>maven-jar-plugin</artifactId>
                  <executions>
                      <execution>
-                         <id>>gendir-package</id>
+                         <id>gendir-package</id>
                          <goals>
                              <goal>test-jar</goal>
                          </goals>
@@ -126,17 +126,14 @@
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm-commons</artifactId>
-            <version>${asm.version}</version>
         </dependency>
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm-tree</artifactId>
-            <version>${asm.version}</version>
         </dependency>
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm-util</artifactId>
-            <version>${asm.version}</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.hk2</groupId>
@@ -157,6 +154,7 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-core</artifactId>
             <version>${mvn.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
