--- a/pom.xml
+++ b/pom.xml
@@ -333,7 +333,7 @@
                     <version>3.5.0</version>
                     <configuration>
                         <additionalOptions>
-                            <additionalOption>${javadoc.options}</additionalOption>
+                            <additionalOption>-Xdoclint:none</additionalOption>
                         </additionalOptions>
                     </configuration>
                 </plugin>
@@ -949,16 +949,6 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
-        <profile>
-            <id>javadoc-jdk8+</id>
-            <activation>
-                <jdk>[1.8,)</jdk>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <javadoc.options>-Xdoclint:none</javadoc.options>
-            </properties>
         </profile>
     </profiles>
 </project>
