--- a/pom.xml
+++ b/pom.xml
@@ -332,9 +332,7 @@
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>3.5.0</version>
                     <configuration>
-                        <additionalOptions>
-                            <additionalOption>-Xdoclint:none</additionalOption>
-                        </additionalOptions>
+                        <doclint>none</doclint>
                     </configuration>
                 </plugin>
                 <plugin>
