--- a/pom.xml
+++ b/pom.xml
@@ -390,6 +390,9 @@
                     <groupId>org.glassfish.hk2</groupId>
                     <artifactId>hk2-inhabitant-generator</artifactId>
                     <version>${project.version}</version>
+                    <configuration>
+                        <includeDate>false</includeDate>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
